# auto-rocket

./: .env.example  .gitignore  README.md  build_dmg.py  build_exe.py  chat_processor.py  client.py  config.py  config.toml  conversation_monitor.py  create_icon.py  db_manager.py  dify_client.py  gui.py  launcher.py  logger_config.py  main.py  playwright_ws.py  pyproject.toml  reply_handler.py  start.bat  start.ps1  start.sh  验证码识别.py
.serena/: project.yml
core/: __init__.py  auth_manager.py  chat_processor.py  client.py  conversation_monitor.py  db_manage.py  dify.py  http_client.py  message_service.py  message_splitter.py  ws.py
gui/: __init__.py  login_window.py  main_window.py
services/: __init__.py  rocket_service.py  scheduler_service.py
