[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "ddddocr>=1.5.6",
    "passlib[argon2]>=1.7.4",
    "playwright>=1.55.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "websocket-client>=1.9.0",
]
[tool.playwright.install]
chromium = true
deps = true
